syntax = "proto3";
package DomainServices.RealEstateValuationService;
option csharp_namespace = "DomainServices.RealEstateValuationService.Contracts";

message UpdateValuationTypeByRealEstateValuationRequest {
    int32 RealEstateValuationId = 1;
    int32 ValuationTypeId = 2;
}
